# mypy-diary

./: .gitignore  pyproject.toml
enq/: __main__.py  main.py
enq/cli/: args.py  editor.py  interface.py  menu.py
enq/core/: entry.py
enq/storage/: base.py  database.py  file.py  types.py
enq/storage/schemas/: 001_entries.sql  002_entries_history.sql  entries.sql
enq/utils/: cli.py
lifelog/assets/: default_config.toml
lifelog/core/: config.py  entry.py
lifelog/storage/: database.py  file.py
mypy_diary/: editor.py  main.py
mypy_diary/cli/: args.py
mypy_diary/core/: config.py  constants.py  entry.py  logger.py  types.py
